--- a/packages/shared/styles/_base.scss
+++ b/packages/shared/styles/_base.scss
@@ -16,7 +16,7 @@ body {
 body {
   overflow-x: auto;
   overflow-y: auto;
-  min-width: 1280px;
+  // min-width: 1280px;
 
   &::-webkit-scrollbar {
     width: 6px;
