--- a/packages/euler/src/shared/style/_font.scss
+++ b/packages/euler/src/shared/style/_font.scss
@@ -1,12 +1,12 @@
 @font-face {
   font-family: 'PangMenZhengDao';
-  src: url('../font/PangMenZhengDao.ttf');
+  src: url('../font/PangMenZhengDao.woff2');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'Milky-Han-Term-CN-Heavy-Italic';
-  src: url('../font/milky-term-cn-heavyitalic.ttf');
+  src: url('../font/milky-term-cn-heavyitalic.woff2');
   font-weight: normal;
   font-style: normal;
 }
